Update home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<p>meow</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Meow Binary Encoder/Decoder</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <h1>Schrodinger's Cat Church</h1>
+    <a href="./catbinay.html">Cat Binary Encoder/Decoder</a>
+</body>
+
+</html>
