--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <h1>Schrodinger's Cat Church</h1>
     <a href="./catbinay.html">Cat Binary Encoder/Decoder</a>
+    <br>
+    <h2>Join the Discord</h2>
+    <iframe src="https://discord.com/widget?id=909353845354807297&theme=dark" width="350" height="500"
+        allowtransparency="true" frameborder="0"
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 
 </html>
