--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <h1>Schrodinger's Cat Church</h1>
+    <img src="./img/holy.png">
+    <br>
     <a href="./catbinay.html">Cat Binary Encoder/Decoder</a>
     <br>
     <h2>Join the Discord</h2>
