--- a/catbinay.html
+++ b/catbinay.html
@@ -11,6 +11,8 @@
 
 <body>
     <h1>Meow Binary Encoder/Decoder</h1>
+    <img src="./img/holy.png">
+    <br>
     <h2>Use this tool to convert your messages into the official language of the Schrodinger's Cat Church</h2>
     <form>
         <label for="english">English:</label>
