--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>Schrodinger's Cat Church</h1>
     <img src="./img/holy.png">
     <br>
+    <a href="./about.html">About</a>
+    <br>
     <a href="./catbinay.html">Cat Binary Encoder/Decoder</a>
     <br>
     <h2>Join the Discord</h2>
