--- a/catbinay.html
+++ b/catbinay.html
@@ -13,6 +13,8 @@
     <h1>Meow Binary Encoder/Decoder</h1>
     <img src="./img/holy.png">
     <br>
+    <a href="./index.html">Home</a>
+    <br>
     <h2>Use this tool to convert your messages into the official language of the Schrodinger's Cat Church</h2>
     <form>
         <label for="english">English:</label>
