--- a/catbinay.html
+++ b/catbinay.html
@@ -16,6 +16,7 @@
     <a href="./index.html">Home</a>
     <br>
     <h2>Use this tool to convert your messages into the official language of the Schrodinger's Cat Church</h2>
+    <h3>Communicate in this language to show your devotion to our church!</h3>
     <form>
         <label for="english">English:</label>
         <input type="text" id="english" name="english" onkeyup="encode()" onchange="encode()"><br>
