--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 <p>we like schobinger cat</p>
 <p>schiobingers constant is 707070</p>
 <p>our favorite font is comic san</p>
+<p>meowMEOWMEOWmeowMEOWmeowMEOWmeowmeowMEOWMEOWmeowMEOWMEOWMEOWMEOWmeowMEOWMEOWmeowMEOWmeowmeowMEOWmeowMEOWMEOWmeowMEOWMEOWMEOWmeowmeowmeowMEOWmeowmeowmeowmeowmeowmeowMEOWMEOWMEOWmeowMEOWmeowMEOWmeowMEOWMEOWMEOWmeowmeowMEOWMEOW</p>
 </body>
 
 </html>
