--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
 <p>we like schobinger cat</p>
 <p>schiobingers constant is 707070</p>
 <p>our favorite font is comic san</p>
-<p>meowMEOWMEOWmeowMEOWmeowMEOWmeowmeowMEOWMEOWmeowMEOWMEOWMEOWMEOWmeowMEOWMEOWmeowMEOWmeowmeowMEOWmeowMEOWMEOWmeowMEOWMEOWMEOWmeowmeowmeowMEOWmeowmeowmeowmeowmeowmeowMEOWMEOWMEOWmeowMEOWmeowMEOWmeowMEOWMEOWMEOWmeowmeowMEOWMEOW</p>
+<div style="margin: auto;width: 50%;overflow-wrap: break-word;">
+    <p>meowMEOWMEOWmeowMEOWmeowMEOWmeowmeowMEOWMEOWmeowMEOWMEOWMEOWMEOWmeowMEOWMEOWmeowMEOWmeowmeowMEOWmeowMEOWMEOWmeowMEOWMEOWMEOWmeowmeowmeowMEOWmeowmeowmeowmeowmeowmeowMEOWMEOWMEOWmeowMEOWmeowMEOWmeowMEOWMEOWMEOWmeowmeowMEOWMEOW
+    </p>
+</div>
+
 </body>
 
 </html>
