--- a/catbinay.html
+++ b/catbinay.html
@@ -14,6 +14,7 @@
     <img src="./img/holy.png">
     <br>
     <a href="./index.html">Home</a>
+    <a href="./about.html">About</a>
     <br>
     <h2>Use this tool to convert your messages into the official language of the Schrodinger's Cat Church</h2>
     <h3>Communicate in this language to show your devotion to our church!</h3>
