--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" type="image/png" href="./img/icon.png">
 </head>
 <h1>Schrodinger's Cat Church</h1>
 <img src="./img/holy.png">
