--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <audio id="bgmusic" src="./aud/shombinger.mp3" loop="loop"></audio>
     <h1>Schrodinger's Cat Church</h1>
     <img src="./img/holy.png">
     <br>
@@ -23,5 +24,6 @@
         allowtransparency="true" frameborder="0"
         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
+<script src="./aud.js"></script>
 
 </html>
