Add least favorite number (31)

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 <br>
 <p>we like schobinger cat</p>
 <p>schiobingers constant is 707070</p>
+<p>our least favorite number 31</p>
 <p>our favorite font is comic san</p>
 <p>schodinger's favorite foods are mochi and yoza</p>
 <div style="margin: auto;width: 50%;overflow-wrap: break-word;">
